Bug 1765276: Small fixes - input alignment pgs and
collections search, etc.

behatnotneeded

--- a/htdocs/theme/raw/sass/components/_modal.scss
+++ b/htdocs/theme/raw/sass/components/_modal.scss
@@ -98,6 +98,7 @@ $width-sm: 90%;
     }
     .close,
     .mce-close {
+        order: 1;
         opacity: 1;
         &:hover,
         &:focus {
