--- a/htdocs/theme/raw/sass/form/_dropdown-group.scss
+++ b/htdocs/theme/raw/sass/form/_dropdown-group.scss
@@ -19,6 +19,7 @@
     }
 
     &.form-group {
+        margin: 0 3px 0 0;
         border-bottom: none;
         .form-control {
             max-width: none;
