--- a/htdocs/theme/raw/sass/form/_form.scss
+++ b/htdocs/theme/raw/sass/form/_form.scss
@@ -114,6 +114,39 @@ label,
     margin-top: 0;
 }
 
+// BS3 code - begin
+.radio,
+.checkbox {
+  position: relative;
+  display: block;
+  margin-top: 10px;
+  // margin-bottom: 10px;
+
+  label {
+    min-height: $line-height-computed; // Ensure the input doesn't jump when there is no text
+    padding-left: 20px;
+    margin-bottom: 0;
+    font-weight: normal;
+    cursor: pointer;
+  }
+}
+
+.radio input[type="radio"],
+.radio-inline input[type="radio"],
+.checkbox input[type="checkbox"],
+.checkbox-inline input[type="checkbox"] {
+  position: absolute;
+  margin-left: -20px;
+  margin-top: 4px \9;
+}
+
+input[type="radio"],
+input[type="checkbox"] {
+  margin: 4px 0 0;
+  line-height: normal;
+}
+// BS3 code - end
+
 .radio-aligned {
     display: inline-block;
 }
